--- a/css/style.css
+++ b/css/style.css
@@ -140,34 +140,152 @@
     line-height: 114%;
     color: #fff;
   }
-  .section1{
-    background-image: url(../images/bg2.png);
-    background-size: cover;
+  .truck-slide{
+    position: relative;
+  }
+  .bac{
+    background-image: url(../images/Rectangle\ 451\ \(2\).png);
+    width: 350px;
+    height: 260px;
     background-repeat: no-repeat;
-    align-items: center;
+    background-size: cover;
   }
-  .swiper-wrapper{
+  /*.truck-slide:first-child{
+    background-image: url(../images/Rectangle\ 451\ \(2\).png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }*/
+  .truck-slide>.search{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: none;
+  }
+  .truck-slide>.more{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    color: #292929;
+    background-color: #fff;
+    padding: 12px 30px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 15px  0 15px ;
+    border-top-right-radius: 22px;
+    display: none;
   }
-  .swiper-slide{
-    padding: 0 15px  0 15px ;
+  .truck-slide>.more>img{
+    padding-left: 47px;
   }
-  .swiper {
-    width: 100%;
-    height: 100%;
+  .bac:hover{
+    filter: brightness(60%);
+  }
+  .truck-slide:hover>.more{
+    display: flex !important;
+  }
+  .truck-slide:hover>.search{
+    display: flex !important;
+  }
+  .bac2{
+    background-image: url(../images/Rectangle\ 451\ \(1\).png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bac2:hover{
+    filter: brightness(60%);
+  }
+  .bac3{
+    background-image: url(../images/Rectangle\ 451.png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bac3:hover{
+    filter: brightness(60%);
+  }
+  .bac4{
+    background-image: url(../images/Rectangle\ 451\ \(2\).png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bac4:hover{
+    filter: brightness(60%);
+  }
+  .bac5{
+    background-image: url(../images/Rectangle\ 451\ \(1\).png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bac5:hover{
+    filter: brightness(60%);
+  }
+  .bac6{
+    background-image: url(../images/Rectangle\ 451.png);
+    width: 350px;
+    height: 260px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .bac6:hover{
+    filter: brightness(60%);
+  }
+  .swiper-button-prev{
+    position: absolute;
+  }
+  .about{
+   
   }
 
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   @media (max-width: 760px) {
     .swiper-button-next {
       right: 20px;
