--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,10 @@
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 18px;
-    color: #00a3ff;
+    color: #fff;
+  }
+  .first2>a:hover{
+    color: #00A3FF;
   }
   .head2>p{
     font-family: "Poppins", sans-serif;
@@ -62,6 +65,9 @@
     font-weight: 600;
     font-size: 18px;
     color: #fff;
+  }
+  .first3>a:hover{
+    color: #00A3FF;
   }
   .first2{
     display: flex;
@@ -108,6 +114,9 @@
     font-size: 18px;
     text-align: center;
     color: #fff;
+  }
+  .ful-hd2>a:hover{
+    color: #00A3FF;
   }
   .header-botton-center{
     padding-top: 115px;
@@ -243,7 +252,7 @@
   .swiper-button-prev{
     position: absolute;
   }
-  .about>.container>p{
+  .about>.container>.a>p{
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -253,20 +262,19 @@
     max-width: 812px;
     margin-left: 149px;
   }
-  .button-prev>button>img{
+  .button-prev{
     position: absolute;
-    left: 18.75%;
+    left: -50px;
   }
   .slider{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: -74px;
     padding-bottom: 40px;
   }
-  .button-next>button>img{
+  .button-next{
     position: absolute;
-    right: 18.75%;
+    right: -50px;
   }
   .about-top>h3{
     font-family: "Poppins", sans-serif;
@@ -274,7 +282,7 @@
     font-size: 20px;
     text-align: center;
     color: #00a3ff;
-    padding-top: 79px;
+    padding-top: 70px;
     padding-bottom: 10px;
   }
   .about{
@@ -282,6 +290,10 @@
     background-size: cover;
     background-repeat: no-repeat;
     align-items: center;
+  }
+  .a{
+    position: relative;
+    top: -74px;
   }
   .about-top>h2{
     font-family: "Poppins", sans-serif;
@@ -304,11 +316,57 @@
     justify-content: space-between;
     flex-direction: column;
   }
-  
-  
-  
-  
-  
+  .fir>h3{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 100%;
+    color: #212121;
+    padding-bottom: 20px;
+    position: absolute;
+    left: 65px;
+    top: 40px;
+    max-width: 268px;
+  }
+  .fir{
+    border-radius: 10px;
+    width: 540px;
+    height: 240px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.07);
+    background: #fff;
+    position: relative;
+  }
+  .fir>p{
+    position: absolute;
+    left: 65px;
+    top: 100px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 150%;
+    color: #212121;
+    max-width: 410px;
+  }
+  .opis{
+    padding-top: 30px;
+  }
+  .opis-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .h33{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 100%;
+    color: #212121;
+    padding-bottom: 20px;
+    position: absolute;
+    left: 65px;
+    top: 40px;
+    max-width: 178px;
+  }
   
   
   
