--- a/css/style.css
+++ b/css/style.css
@@ -991,7 +991,7 @@
   text-align: center;
   color: #fff;
  }
- .foot-d>.container>button{
+ .foot-d>.container>.bot_up{
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-size: 16px;
@@ -1012,8 +1012,134 @@
   max-width: 100%;
   overflow-x: hidden;
 }
- 
-  
+ .modal__content{
+  width: 760px;
+  height: 528px;
+  position: relative;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.25);
+  background: #fff;
+  display: flex;
+  align-items: center;
+
+ }
+ .modal-con-c{
+  width: 700px;
+  height: 468px;
+  position: relative;
+  background: #061321;
+  border: 1px dashed #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-left: 30px;
+ }
+ .modal-con-c>h2{
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 100%;
+  text-align: center;
+  color: #fff;
+  padding-top: 70px;
+ }
+ .modal-con-c>form>input{
+  border: 1px solid #424242;
+  width: 428px;
+  height: 45px;
+  background: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: center;
+  color: #292929;
+ }
+ .modal-con-c>input{
+  border: 1px solid #424242;
+  width: 428px;
+  height: 45px;
+  background: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: center;
+  color: #292929;
+ }
+ .modal-con-c>button{
+  border-radius: 40px;
+  width: 428px;
+  height: 54px;
+  background: #00a3ff;
+  display: flex;
+  align-items: center;
+ }
+ .modal-con-c>button>p{
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  color: #fff;
+  padding-left: 139px;
+  padding-right: 10px;
+ }
+
+ .modal-con-c>p{
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 100%;
+  text-align: center;
+  color: #fff;
+  padding-bottom: 71px;
+  padding-top: 10px;
+  max-width: 539px;
+ }
+ .modal__content>button{
+  border: 1px solid #fff;
+  width: 38px;
+  height: 38px;
+  background: #061321;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+ }
+ .modal{
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transition: .3s;
+  top: -1000px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 200px 15px;
+  background: rgba(0, 0, 0, 0.7);
+ }
+ .modal__close-button{
+  transition: .3s;
+  outline: none;
+ }
+ .modal__close-button:hover{
+  transition: .3s;
+  transform: rotate(180deg);
+}
+.modal_active {
+  position: fixed;
+  top: 0;
+  visibility: visible;
+  opacity: 1;
+  transition: .3s;
+}
+.hidden {
+  overflow: hidden;
+}
+
   
   
   
